# cmd/app/main.go
@@ -2,6 +2,7 @@ package main
 
 import (
 	"fmt"
+	"os"
 
 	"github.com/go-errors/errors"
 	"github.com/gofiber/fiber/v2"
@@ -9,6 +10,7 @@ import (
 	"github.com/jhseoeo/khuthon2023/internal/domain/service"
 	"github.com/jhseoeo/khuthon2023/internal/infrastructure/persistence"
 	_ "github.com/jhseoeo/khuthon2023/internal/interfaces/docs"
+	"github.com/jhseoeo/khuthon2023/internal/interfaces/middlewares"
 	"github.com/jhseoeo/khuthon2023/internal/interfaces/routes"
 	"github.com/jhseoeo/khuthon2023/pkg/database"
 	"github.com/joho/godotenv"
@@ -19,17 +21,42 @@ func wireUp(app *fiber.App) error {
 	if err != nil {
 		return errors.Errorf("failed to connect to database: %v", err)
 	}
+	app.Use(middlewares.NewCORSMiddleware())
+
+	api := app.Group("/api")
+	jwtSecret := os.Getenv("JWT_SECRET")
+	jwtMiddleware := middlewares.NewJWTMiddleware(jwtSecret)
 
 	basicRoutes := routes.NewBasicRoutes()
-	app.Get("/api/docs/*", basicRoutes.Docs)
-	app.Post("/api/echo", basicRoutes.Echo)
+	api.Get("/docs/*", basicRoutes.Docs)
+	api.Post("/echo", basicRoutes.Echo)
 
 	userRepo := persistence.NewUserRepositoryImpl(db)
 	userService := service.NewUserService(userRepo)
-	authService := usecase.NewAuthService(userService)
-	authRoutes := routes.NewAuthRoutes(authService)
-	app.Post("/api/auth/login", authRoutes.Login)
-	app.Post("/api/auth/register", authRoutes.Register)
+	authUsecase := usecase.NewAuthService(userService)
+	authRoutes := routes.NewAuthRoutes(authUsecase)
+	auth := api.Group("/auth")
+	auth.Post("/login", authRoutes.Login)
+	auth.Post("/register", authRoutes.Register)
+
+	roomService := service.NewRoomService()
+	roomUsecase := usecase.NewRoomUsecase(userService, roomService)
+	roomRoutes := routes.NewRoomRoutes(roomUsecase)
+	room := api.Group("/room", jwtMiddleware)
+	room.Post("/create", roomRoutes.Create)
+	room.Get("/", roomRoutes.GetList)
+	room.Post("/", roomRoutes.Join)
+	room.Post("/leave", roomRoutes.Leave)
+	room.Get("/ws", middlewares.NewWebsocketUpgradeMiddleware(), roomRoutes.WS)
+
+	scoreRepo := persistence.NewScoreRepositoryImpl(db)
+	scoreService := service.NewScoreService(scoreRepo)
+	gameUsecase := usecase.NewGameUsecase(userService, roomService, scoreService)
+	gameRoutes := routes.NewGameRoutes(gameUsecase)
+	game := api.Group("/game", jwtMiddleware)
+	game.Post("/start", gameRoutes.Start)
+	game.Post("/end", gameRoutes.End)
+	game.Post("/ranks", gameRoutes.Ranks)
 
 	return nil
 }
